2009-03-01  Pablo Polvorin <pablo.polvorin@process-one.net>

	* src/ejabberd_auth_anonymous.erl: Host argument for ejabberd_hooks's 
	functions must be in binary() format.

2009-02-28  Badlop  <badlop@process-one.net>

	* src/mod_pubsub/node_default.erl: Fix that non-subscriber could
	fetch items from Authorize node (thanks to Brian Cully)(EJAB-873)

2009-02-27  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http.erl: Added a workaround for inet:peername
	returning 'ebadf'

	* src/tls/tls_drv.c: S2S connection with STARTTLS fails to Gtalk
	and recent Openfire (thanks to Philipp Hancke)(EJAB-877)

	* doc/guide.tex: No mention to the release date in ejabberd Guide
	or release notes. The date of an ejabberd release is determined by
	the date of the corresponding release announcement.

2009-02-25  Badlop  <badlop@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix incorrect implementation of
	Pubsub payload requirements (thanks to Andy Skelton)(EJAB-823)

2009-02-24  Pablo Polvorin <pablo.polvorin@process-one.net>

	* src/ejabberd_service.erl: Exmpp related fixed to the external
	components service.

	* src/mod_echo.erl: Fix call to exmpp_xml:get_cdata_as_list/1.

	* src/mod_muc/mod_muc_log.erl: The logging code expect nicknames
	to be in list() format.

2009-02-23  Pablo Polvorin <pablo.polvorin@process-one.net>

	* src/ejabberd_c2s.erl, src/mod_echo.erl, src/mod_roster.erl,
	src/mod_roster_odbc.erl: Use exmpp_jid:to_binary/1 when possible.

	* src/mod_roster_odbc.erl, src/odbc/ejabberd_odbc.erl:
	ejabberd_odbc:escape/1 now can escape binaries too. This 
	avoid the need to convert a binary value to list() just to 
	sql-escape it. The escaped value returned is allways a list() 
	(ejabberd's odbc drivers only works on lists())

	* src/ejabberd_c2s.erl, src/mod_caps.erl, src/ejabberd_receiver.erl:
	Removed a couple of expensive function calls used as arguments for 
	?DEBUG macros. All arguments used in the ?DEBUG macro are strictly 